[package]
name = "grid-tree"
description = "Pixel quadtrees and voxel octrees."
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bonsairobo/grid-tree-rs"
keywords = ["grid", "quadtree", "octree", "spatial", "voxel"]

[features]
default = ["glam"]

[dependencies]
ahash = "0.7"
slab = "0.4"
smallvec = "1.7"

ndshape = "0.2"

# The default choice of VectorKey.
glam = { version = "0.20", optional = true }
